_generated-doc/3.2/config/quarkus-otel-config-build-o-tel-build-config.adoc

:summaryTableId: quarkus-otel-config-build-o-tel-build-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-otel-config-build-o-tel-build-config_configuration]]link:#quarkus-otel-config-build-o-tel-build-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-otel-config-build-o-tel-build-config_quarkus-otel-traces-exporter]]`link:#quarkus-otel-config-build-o-tel-build-config_quarkus-otel-traces-exporter[quarkus.otel.traces.exporter]`


[.description]
--
List of exporters supported by Quarkus.

List of exporters to be used for tracing, separated by commas. Has one of the values on `ExporterType` `otlp`, `cdi`, `none` or the full qualified name of a class implementing `io.opentelemetry.sdk.trace.export.SpanExporter`

Default on Quarkus is `ExporterType.Constants++#++CDI_VALUE`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_TRACES_EXPORTER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_TRACES_EXPORTER+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`cdi`


a|icon:lock[title=Fixed at build time] [[quarkus-otel-config-build-o-tel-build-config_quarkus-otel-traces-sampler]]`link:#quarkus-otel-config-build-o-tel-build-config_quarkus-otel-traces-sampler[quarkus.otel.traces.sampler]`


[.description]
--
The sampler to use for tracing.

Has one of the values on `SamplerType` `always_on`, `always_off`, `traceidratio`, `parentbased_always_on`, `parentbased_always_off`, `parentbased_traceidratio` or the Sampler SPI name. This will use the OTel SPI hooks for the `io.opentelemetry.sdk.trace.samplers.Sampler` implementation set in the provider: `io.opentelemetry.sdk.autoconfigure.spi.traces.ConfigurableSamplerProvider`.

Fallbacks to the legacy property `quarkus.opentelemetry.tracer.sampler.sampler.name` or defaults to `SamplerType.Constants++#++PARENT_BASED_ALWAYS_ON`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_TRACES_SAMPLER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_TRACES_SAMPLER+++`
endif::add-copy-button-to-env-var[]
--|string 
|`parentbased_always_on`


a|icon:lock[title=Fixed at build time] [[quarkus-otel-config-build-o-tel-build-config_quarkus-otel-metrics-exporter]]`link:#quarkus-otel-config-build-o-tel-build-config_quarkus-otel-metrics-exporter[quarkus.otel.metrics.exporter]`


[.description]
--
No Metrics exporter for now

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_METRICS_EXPORTER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_METRICS_EXPORTER+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`none`


a|icon:lock[title=Fixed at build time] [[quarkus-otel-config-build-o-tel-build-config_quarkus-otel-logs-exporter]]`link:#quarkus-otel-config-build-o-tel-build-config_quarkus-otel-logs-exporter[quarkus.otel.logs.exporter]`


[.description]
--
No Log exporter for now.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_LOGS_EXPORTER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_LOGS_EXPORTER+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`none`


a|icon:lock[title=Fixed at build time] [[quarkus-otel-config-build-o-tel-build-config_quarkus-otel-propagators]]`link:#quarkus-otel-config-build-o-tel-build-config_quarkus-otel-propagators[quarkus.otel.propagators]`


[.description]
--
The propagators to be used. Use a comma-separated list for multiple propagators.

Has values from `PropagatorType` or the full qualified name of a class implementing `io.opentelemetry.context.propagation.TextMapPropagator`.

Default is `PropagatorType.Constants++#++TRACE_CONTEXT`,`PropagatorType.Constants++#++BAGGAGE` (W3C).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_PROPAGATORS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_PROPAGATORS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`tracecontext,baggage`

|===